--- a/app/manifest.json
+++ b/app/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "description": "__MSG_appDescription__",
   "icons": {
-    "16": "images/icon-16.png",
+    "38": "images/icon-38.png",
     "128": "images/icon-128.png"
   },
   "default_locale": "en",
@@ -19,31 +19,18 @@
     "tabs",
     "http://*/*",
     "https://*/*",
-    "clipboardWrite"
+    "clipboardWrite",
+    "webRequest"
   ],
   "options_ui": {
     "page": "options.html",
     "chrome_style": true
   },
-  "content_scripts": [
-    {
-      "matches": [
-        "http://*/*",
-        "https://*/*"
-      ],
-      "js": [
-        "scripts/contentscript.js"
-      ],
-      "run_at": "document_end",
-      "all_frames": false
-    }
-  ],
   "browser_action": {
     "default_icon": {
-      "19": "images/icon-19.png",
-      "38": "images/icon-38.png"
+      "38": "images/icon-silver-38.png",
+      "128":  "images/icon-silver-128.png"
     },
-    "default_title": "SpecRadar",
-    "default_popup": "popup.html"
+    "default_title": "SpecRadar"
   }
 }
